# CS_AI_CAR_DATA_API

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: main.yml
car_data_api/: app.py
car_data_api/api/: app.py
car_data_api/api/clients/: db_client.py
car_data_api/api/dependencies/: db_client_dependency.py
car_data_api/api/endpoints/: car_data_endpoints.py
car_data_api/api/middleware/: catch_exceptions_middleware.py
car_data_api/api/models/response/: car_details_response_model.py  generations_response_model.py  makes_response_model.py  models_response_model.py  static_data_response_model.py
car_data_api/api/models/shared/: body_types.py  car_model.py  colors.py  equipment.py  history.py  sell_options.py  tech_data.py
car_data_api/api/responses/: get_car_equipment_details_response.py  get_generations_response.py  get_makes_response.py  get_models_response.py  get_static_data_response.py
car_data_api/api/static_files/: body_types.json  car_color.json  equipment.json  fuel_types.json  history.json  sell_options.json  tech_data.json  transmissions.json
